--- a/Frontend/home/src/app/location/location.component.html
+++ b/Frontend/home/src/app/location/location.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<!-- <app-header></app-header>
 <br><br><br><br><br>
 <div class="container">
   <div class="map-container">
@@ -9,7 +9,6 @@
     <h3>Our Car Shops</h3>
     <ul>
       <li *ngFor="let shop of shops; let i = index">
-        <!-- Custom icons for each shop -->
         <img [src]="shop.icon" alt="Shop Icon" />
         <span class="shop-name">{{ shop.name }}</span> -
         <span class="shop-address">{{ shop.address }}</span>
@@ -18,4 +17,22 @@
   </div>
   <br><br><br>
 </div>
+ -->
+ <app-header></app-header>
+<div class="container">
+  <div class="map-container">
+    <div id="map" style="height: 400px;"></div>
+  </div>
 
+  <div class="shop-list">
+    <h3>Our Car Shops</h3>
+    <ul>
+      <!-- Iterate through the shops array and display each shop's details -->
+      <li *ngFor="let shop of shops">
+        <img [src]="shop.icon" alt="Shop Icon" />
+        <span class="shop-name">{{ shop.name }}</span> -
+        <span class="shop-address">{{ shop.address }}</span>
+      </li>
+    </ul>
+  </div>
+</div>
