--- a/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
+++ b/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
@@ -24,7 +24,7 @@
             <i class="bi bi-person-plus-fill"></i>          </div>
           <div class="content">
             <h6 class="mb-10">New Users</h6>
-            <h3 class="text-bold mb-10">34567</h3>
+            <h3 class="text-bold mb-10">{{last30}}</h3>
             <p class="text-sm text-success">
               <span class="text-gray">(30 days)</span>
             </p>
