--- a/Frontend/Admin/src/app/bookings/bookings.component.html
+++ b/Frontend/Admin/src/app/bookings/bookings.component.html
@@ -25,9 +25,11 @@
     <table class="table table-striped table-hover">
       <thead class="table-light">
         <tr>
-          <th>#</th>
+        
+          <th>User Id</th>
           <th>Car</th>
           <th>User</th>
+          <th>Email</th>
           <th>Date</th>
           <th>Status</th>
           <th>Actions</th>
@@ -36,16 +38,17 @@
       <tbody>
         <tr *ngFor="let booking of filteredBookings; let i = index">
           <td>{{ i + 1 }}</td>
-          <td>{{ booking.car }}</td>
-          <td>{{ booking.user }}</td>
-          <td>{{ booking.date | date : "shortDate" }}</td>
+          <td>{{ booking.selectedCarDetails }}</td>
+          <td>{{ booking.name }}</td>
+          <td>{{ booking.email }}</td>
+          <td>{{ booking.preferredDate | date : "shortDate" }}</td>
           <td>
             <span
-              class="badge"
+              class="badge" style="background-color: rgb(43, 99, 184);"
               [ngClass]="{
-                'bg-primary': booking.status === 'Confirmed',
+                'bg-success': booking.status === 'Confirmed',
                 'bg-secondary': booking.status === 'Cancelled',
-                'bg-dark': booking.status === 'Pending'
+                'bg-primary': booking.status === 'Pending'
               }"
             >
               {{ booking.status }}
@@ -53,17 +56,24 @@
           </td>
           <td class="action-buttons">
             <button
-              class="btn btn-sm btn-info me-2"
+              class="btn btn-sm btn-info me-2 mx-2"
               (click)="viewDetails(booking)"
             >
               <i class="fas fa-eye icon-small"></i> Details
             </button>
             <button
-              class="btn btn-sm btn-dark"
+              class="btn btn-sm btn-danger mx-2"
               (click)="cancelBooking(booking)"
               [disabled]="booking.status === 'Cancelled'"
             >
               <i class="fas fa-times-circle icon-small"></i> Cancel
+            </button>
+            <button
+              class="btn btn-sm btn-success mx-2"
+              (click)="cancelBooking(booking)"
+              [disabled]="booking.status === 'Cancelled'"
+            >
+              <i class="fas fa-times-circle icon-small"></i> Approve
             </button>
           </td>
         </tr>
