--- a/Frontend/Admin/src/app/bookings/bookings.component.html
+++ b/Frontend/Admin/src/app/bookings/bookings.component.html
@@ -1,6 +1,6 @@
 <app-admin-header></app-admin-header>
 
-<div class="container mt-4" id="book">
+<div class="container-fluid mt-4" id="book">
   <!-- Page Header -->
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h2>Bookings</h2>
@@ -21,11 +21,10 @@
   </div> -->
 
   <!-- Bookings Table -->
-  <div class="table-responsive">
-    <table class="table table-striped table-hover">
+  <div class="table-responsive w-100">
+    <table class="table table-responsive table-striped">
       <thead class="table-light">
         <tr>
-        
           <th>User Id</th>
           <th>Car</th>
           <th>User</th>
@@ -44,7 +43,8 @@
           <td>{{ booking.preferredDate | date : "shortDate" }}</td>
           <td>
             <span
-              class="badge" style="background-color: rgb(43, 99, 184);"
+              class="badge"
+              style="background-color: rgb(43, 99, 184)"
               [ngClass]="{
                 'bg-success': booking.status === 'Confirmed',
                 'bg-secondary': booking.status === 'Cancelled',
@@ -81,4 +81,3 @@
     </table>
   </div>
 </div>
-
