--- a/Frontend/Admin/src/app/showrooms/showrooms.component.html
+++ b/Frontend/Admin/src/app/showrooms/showrooms.component.html
@@ -7,7 +7,7 @@
   <div class="row">
     <h3 class="text-center mb-4">Renault Showrooms</h3>
 
-    <div *ngFor="let showroom of renaultShowrooms" class="col-md-4 mb-4">
+    <div *ngFor="let showroom of showrooms" class="col-md-4 mb-4">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">{{ showroom.name }}</h5>
@@ -23,7 +23,7 @@
   </div>
 
   <!-- Nissan Showrooms -->
-  <div class="row">
+  <!-- <div class="row">
     <h3 class="text-center mb-4">Nissan Showrooms</h3>
 
     <div *ngFor="let showroom of nissanShowrooms" class="col-md-4 mb-4">
@@ -39,10 +39,10 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- Mitsubishi Showrooms -->
-  <div class="row">
+  <!-- <div class="row">
     <h3 class="text-center mb-4">Mitsubishi Showrooms</h3>
 
     <div *ngFor="let showroom of mitsubishiShowrooms" class="col-md-4 mb-4">
@@ -59,7 +59,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
   
-  <!-- <app-location></app-location> -->
+  <app-location></app-location>
