--- a/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
+++ b/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
@@ -102,7 +102,7 @@
         <div class="card-style mb-30">
           <div class="title d-flex flex-wrap align-items-center justify-content-between">
             <div class="left">
-              <h6 class="text-medium mb-30">Car Sales</h6>
+              <h6 class="text-medium mb-30">Test Drive slot Registration</h6>
             </div>
             
           </div>
@@ -119,10 +119,11 @@
           <ul class="legend3 d-flex flex-wrap align-items-center mb-30">
             <li>
               <div class="d-flex">
+                
                 <span class="bg-color primary-bg"> </span>
                 <div class="text">
                   <p class="text-sm text-success">
-                    <span class="text-dark">Revenue</span> +25.55%
+                    <span class="text-dark">Revenue</span> 
                   </p>
                 </div>
               </div>
