--- a/Frontend/Admin/src/app/showrooms/showrooms.component.html
+++ b/Frontend/Admin/src/app/showrooms/showrooms.component.html
@@ -4,7 +4,7 @@
   <h2 class="text-center mb-4">MyRNM Showrooms in India</h2>
   
   <!-- Renault Showrooms -->
-  <div class="row">
+  <!-- <div class="row">
     <h3 class="text-center mb-4">Renault Showrooms</h3>
 
     <div *ngFor="let showroom of renaultShowrooms" class="col-md-4 mb-4">
@@ -20,10 +20,10 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- Nissan Showrooms -->
-  <div class="row">
+  <!-- <div class="row">
     <h3 class="text-center mb-4">Nissan Showrooms</h3>
 
     <div *ngFor="let showroom of nissanShowrooms" class="col-md-4 mb-4">
@@ -39,10 +39,11 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- Mitsubishi Showrooms -->
-  <div class="row">
+  <!-- <div class="row">
+
     <h3 class="text-center mb-4">Mitsubishi Showrooms</h3>
 
     <div *ngFor="let showroom of mitsubishiShowrooms" class="col-md-4 mb-4">
@@ -58,8 +59,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
+
+  <app-location></app-location>
 </div>
 
   
-  <!-- <app-location></app-location> -->
