--- a/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
+++ b/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
@@ -114,50 +114,27 @@
         </div>
       </div>
       <!-- End Col -->
-      <div class="col">
+      <div class="col-6">
+        <div class="card-style mb-30">
+
         <div id="legend3">
           <ul class="legend3 d-flex flex-wrap align-items-center mb-30">
-            <li>
-              <div class="d-flex">
-                
-                <span class="bg-color primary-bg"> </span>
-                <div class="text">
-                  <p class="text-sm text-success">
-                    <span class="text-dark">Revenue</span> 
-                  </p>
-                </div>
+            <div class="title d-flex flex-wrap justify-content-between">
+              <div class="left">
+                <h6 class="text-medium mb-10">Number of Registered Cars</h6>
               </div>
-            </li>
-            <li>
-              <div class="d-flex">
-                <span class="bg-color purple-bg"></span>
-                <div class="text">
-                  <p class="text-sm text-success">
-                    <span class="text-dark">Net Profit</span> +45.55%
-                  </p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="d-flex">
-                <span class="bg-color orange-bg"></span>
-                <div class="text">
-                  <p class="text-sm text-danger">
-                    <span class="text-dark">Order</span> -4.2%
-                  </p>
-                </div>
-              </div>
-            </li>
+             
+            </div>
+           
           </ul>
         </div>
         <canvas id="Chart3" style="width: 100%; height: 450px; margin-left: -35px;">{{chart3}}</canvas>
       </div>
-
+      </div>
       <div class="col-lg-5">
-        <div class="card-style mb-30">
-          
+        <div class="card-style mb-30">          
           <!-- End Title -->
-          <div class="chart">
+          <div class="chart" id="barchart2">
             <div id="legend4">
               <ul class="legend3 d-flex flex-wrap gap-3 gap-sm-0 align-items-center mb-30">
                 <li>
