--- a/Frontend/Admin/src/app/notifications/notifications.component.css
+++ b/Frontend/Admin/src/app/notifications/notifications.component.css
@@ -161,7 +161,7 @@
   }
 }
 
-.container {
+.container-fluid {
   margin-left: 250px; /* Adjust based on the width of the navbar */
   width: calc(100% - 250px); /* Make the dashboard take the rest of the available space */
   padding: 20px;
