--- a/Frontend/Admin/src/app/users/users.component.html
+++ b/Frontend/Admin/src/app/users/users.component.html
@@ -1,5 +1,6 @@
-<app-admin-header></app-admin-header>
-<div class="container mt-4" id="users">
+<div class="container-fluid mt-4" id="users">
+  <app-admin-header></app-admin-header>
+
   <!-- Page Header -->
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h2 class="page-title">Users</h2>
