--- a/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.css
+++ b/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.css
@@ -15,6 +15,9 @@
   background-color: #f7c600;
 }
 
+/* #barchart2{
+  height:450px;
+} */
 .section {
   margin-left: 250px; /* Adjust based on the width of the navbar */
   width: calc(100% - 250px); /* Make the dashboard take the rest of the available space */
