--- a/Frontend/Admin/src/app/location/location.component.css
+++ b/Frontend/Admin/src/app/location/location.component.css
@@ -1,5 +1,5 @@
 /* Container for the map and shop list */
-.container {
+.container-fluid {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -108,3 +108,4 @@
     text-align: center;
   }
 }
+
