--- a/Frontend/Admin/src/app/location/location.component.html
+++ b/Frontend/Admin/src/app/location/location.component.html
@@ -1,10 +1,10 @@
 
-<div class="container">
+<div class="container-fluid">
   <div class="map-container">
     <div id="map" style="height: 400px;"></div>
   </div>
 
-  <div class="shop-list">
+  <div class="shop-list" style="width:50%">
     <h3>Our Car Shops</h3>
     <ul>
       <li *ngFor="let shop of shops; let i = index">
