--- a/Frontend/Admin/src/app/notifications/notifications.component.html
+++ b/Frontend/Admin/src/app/notifications/notifications.component.html
@@ -12,7 +12,7 @@
   </div>
 </section> -->
 <app-admin-header></app-admin-header>
-<div class="container">
+<div class="container-fluid">
   <!-- Title Section -->
   <div class="text-center">
     <h1 class="news-heading">Notifications - Latest News</h1>
