--- a/Frontend/Admin/src/app/showrooms/showrooms.component.html
+++ b/Frontend/Admin/src/app/showrooms/showrooms.component.html
@@ -1,7 +1,7 @@
 <app-admin-header></app-admin-header>
 
 <div class="container mt-4" id="showroom">
-  <h2 class="text-center mb-4">MyRNM Showrooms in India</h2>
+  <h2 class="text-center mb-4" style="text-align: left;">MyRNM Showrooms in India</h2><br><br>
   
   <!-- Renault Showrooms -->
   <!-- <div class="row">
