--- a/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
+++ b/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
@@ -92,7 +92,7 @@
           </div>
           <!-- End Title -->
           <div class="chart">
-            <canvas id="Chart1" style="width: 100%; height: 400px; margin-left: -35px;">{{chart}}</canvas>
+            <canvas id="Chart1" style="width: 100%; height: 400px; ">{{chart}}</canvas>
           </div>
           <!-- End Chart -->
         </div>
@@ -102,39 +102,35 @@
         <div class="card-style mb-30">
           <div class="title d-flex flex-wrap align-items-center justify-content-between">
             <div class="left">
-              <h6 class="text-medium mb-30">Test Drive slot Registration</h6>
+              <h6 class="text-medium mb-30">Car Sales</h6>
             </div>
             
           </div>
           <!-- End Title -->
           <div class="chart">
-            <canvas id="Chart2" style="width: 100%; height: 400px; margin-left: -45px;">{{chart2}}</canvas>
+            <canvas id="Chart2" style="width: 100%; height: 400px; ">{{chart2}}</canvas>
           </div>
           <!-- End Chart -->
         </div>
       </div>
       <!-- End Col -->
-      <div class="col-6">
-        <div class="card-style mb-30">
-
+      <div class="col">
         <div id="legend3">
-          <ul class="legend3 d-flex flex-wrap align-items-center mb-30">
             <div class="title d-flex flex-wrap justify-content-between">
               <div class="left">
-                <h6 class="text-medium mb-10">Number of Registered Cars</h6>
+                <h6 class="text-medium mb-10">Cars Registered by Users (2024) </h6>
               </div>
              
             </div>
-           
-          </ul>
         </div>
-        <canvas id="Chart3" style="width: 100%; height: 450px; margin-left: -35px;">{{chart3}}</canvas>
+        <canvas id="Chart3" style="width: 100%; height: 450px;">{{chart3}}</canvas>
       </div>
-      </div>
+
       <div class="col-lg-5">
-        <div class="card-style mb-30">          
+        <div class="card-style mb-30">
+          
           <!-- End Title -->
-          <div class="chart" id="barchart2">
+          <div class="chart">
             <div id="legend4">
               <ul class="legend3 d-flex flex-wrap gap-3 gap-sm-0 align-items-center mb-30">
                 <li>
@@ -161,7 +157,7 @@
                 </li>
               </ul>
             </div>
-            <canvas id="Chart4" style="width: 100%; height: 420px; margin-left: -35px;">{{chart4}}</canvas>
+            <canvas id="Chart4" style="width: 100%; height: 420px; ">{{chart4}}</canvas>
           </div>
           <!-- End Chart -->
         </div>
