--- a/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
+++ b/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
@@ -55,7 +55,7 @@
           </div>
           <div class="content">
             <h6 class="mb-10">Total Showrooms</h6>
-            <h3 class="text-bold mb-10">15</h3>
+            <h3 class="text-bold mb-10">{{showroomcount}}</h3>
             <p class="text-sm text-success">
               <span class="text-gray">(Renault, Nissan and Mitsubhishi)</span>
             </p>
