--- a/Frontend/Landing_page/src/app/contact/contact.component.css
+++ b/Frontend/Landing_page/src/app/contact/contact.component.css
@@ -242,7 +242,7 @@ h1 {
   }
 }
 #logos {
-  background-color: #f9f9f9; /* Light background for the logos section */
+  /* background-color: #f9f9f9; Light background for the logos section */
   padding: 50px 20px;
 }
 
