--- a/Frontend/Landing_page/src/app/app.component.html
+++ b/Frontend/Landing_page/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <app-header></app-header> -->
+<app-header></app-header>
 <router-outlet></router-outlet>
 <app-chatbot></app-chatbot>
 
@@ -6,5 +6,4 @@
 <button id="scrollToTopBtn" class="scroll-to-top-btn" (click)="scrollToTop()">
   <span>&uarr;</span> <!-- A simple upward arrow -->
 </button>
-
 <app-footer></app-footer>
