--- a/Frontend/Landing_page/src/app/header/header.component.css
+++ b/Frontend/Landing_page/src/app/header/header.component.css
@@ -2,7 +2,7 @@
 .header {
   font-family: Arial, sans-serif;
   padding: 20px 40px;
-  background-color: #1d1c1c;
+  background-color: black;
   box-shadow: 0 2px 10px rgba(238, 234, 234, 0.822);
 }
 
