Still in progress!

--- a/Frontend/Car Selection Page/Car-Selection-Page/src/app/car-selection/car-selection.component.html
+++ b/Frontend/Car Selection Page/Car-Selection-Page/src/app/car-selection/car-selection.component.html
@@ -188,7 +188,7 @@
         </select>
       </label>
     </div>
-    <button class="apply-filters baloo" (click)="applyFilters()">Apply!</button>
+    <!-- <button class="apply-filters baloo" (click)="applyFilters()">Apply!</button> -->
   </div>
 </div>
 
