--- a/Frontend/Landing_page/src/app/home/home.component.html
+++ b/Frontend/Landing_page/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
 
 
-<section class="home" id="home">
+<!-- <section class="home" id="home">
   <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -25,8 +25,17 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-</section>
+</section> -->
 
+<section class="home" id="home">
+  <div class="video-container">
+    <video class="d-block w-100" controls autoplay muted loop>
+      <source src="renault_video1.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+
+  </div>
+</section>
 <app-booking></app-booking>
 <app-service-list></app-service-list>
 <app-contact></app-contact>
