--- a/Frontend/Landing_page/src/app/home/home.component.html
+++ b/Frontend/Landing_page/src/app/home/home.component.html
@@ -30,7 +30,7 @@
 <section class="home" id="home">
   <div class="video-container">
     <video class="d-block w-100" controls autoplay muted loop>
-      <source src="renault_video.mp4" type="video/mp4">
+      <source src="renault_video1.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
 
