--- a/Frontend/Admin/src/app/bookings/bookings.component.html
+++ b/Frontend/Admin/src/app/bookings/bookings.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <!-- Search Bar -->
-  <!-- <div class="input-group mb-4">
+  <div class="input-group mb-4">
     <input
       type="text"
       class="form-control search-input"
@@ -18,7 +18,7 @@
     <button class="btn btn-outline-primary" type="button">
       <i class="fas fa-search"></i> Search
     </button>
-  </div> -->
+  </div>
 
   <!-- Bookings Table -->
   <div class="table-responsive w-100">
@@ -79,5 +79,10 @@
         </tr>
       </tbody>
     </table>
+  </div>
+
+  <!-- Load More Button -->
+  <div class="d-flex justify-content-center mt-4">
+    <button *ngIf="filteredBookings.length < bookings.length" class="btn btn-primary" (click)="loadMore()">Load More</button>
   </div>
 </div>
