--- a/Frontend/Admin/src/app/user-feedback/user-feedback.component.html
+++ b/Frontend/Admin/src/app/user-feedback/user-feedback.component.html
@@ -4,12 +4,13 @@
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h2>User Feedback</h2>
   </div>
-<br>
+  <br>
+
   <!-- Feedback Cards -->
   <div class="card-style">
-    <div *ngFor="let feedback of feedbackList; let i = index" class="single-notification">
+    <div *ngFor="let feedback of displayedFeedback; let i = index" class="single-notification">
       <div class="notification">
-        <div class="image info-bg" id ="bgimg" [ngClass]="getBackgroundClass(i)">
+        <div class="image info-bg" id="bgimg" [ngClass]="getBackgroundClass(i)">
           <span>{{ feedback.user_name.charAt(0) }}</span> <!-- First letter of user -->
         </div>
         <a href="#0" class="content">
@@ -33,5 +34,14 @@
       </div>
     </div>
   </div>
-  <!-- end Feedback Cards -->
+  <!-- End Feedback Cards -->
+
+  <!-- Load More Button -->
+  <div class="text-center mt-4">
+    <button *ngIf="displayedFeedback.length < feedbackList.length" 
+            class="btn btn-primary" 
+            (click)="loadMore()">
+      Load More
+    </button>
+  </div>
 </div>
