--- a/Frontend/Landing_page/src/app/booking/booking.component.html
+++ b/Frontend/Landing_page/src/app/booking/booking.component.html
@@ -1,7 +1,11 @@
 <div class="container-fluid" id="booking">
   <div class="hero-section">
-    <h1>Welcome to MyRNM</h1>
-    <p>Your journey to the perfect car starts here. Explore our wide range of Renault, Nissan, and Mitsubishi vehicles, find your ideal model, and book a test drive today!</p>
+    <h1>Welcome to MyRNM APPLICATION HEREEE</h1>
+    <p>
+      Your journey to the perfect car starts here. Explore our wide range of
+      Renault, Nissan, and Mitsubishi vehicles, find your ideal model, and book
+      a test drive today!
+    </p>
   </div>
 
   <div class="card-container">
@@ -10,7 +14,10 @@
         <i class="fas fa-car"></i>
       </div>
       <h2>Explore Our Vehicles</h2>
-      <p>Browse through our diverse selection of cars, from compact city vehicles to spacious SUVs. Discover our latest features and models.</p>
+      <p>
+        Browse through our diverse selection of cars, from compact city vehicles
+        to spacious SUVs. Discover our latest features and models.
+      </p>
       <a href="/car-selection-page">
         <button class="explore-btn">Explore Cars</button>
       </a>
@@ -21,7 +28,11 @@
         <i class="fas fa-search"></i>
       </div>
       <h2>Find Your Perfect Match</h2>
-      <p>Search through a variety of vehicles to find the car that suits your needs. Whether it's a stylish sedan or a versatile SUV, we have the perfect model waiting for you.</p>
+      <p>
+        Search through a variety of vehicles to find the car that suits your
+        needs. Whether it's a stylish sedan or a versatile SUV, we have the
+        perfect model waiting for you.
+      </p>
       <a href="/car-selection-page">
         <button class="explore-btn">Find Your Dream</button>
       </a>
@@ -32,7 +43,10 @@
         <i class="fas fa-car-side"></i>
       </div>
       <h2>Test Drive Your Future Car</h2>
-      <p>Experience the thrill of driving. Book a test drive today and find the car that fits your lifestyle.</p>
+      <p>
+        Experience the thrill of driving. Book a test drive today and find the
+        car that fits your lifestyle.
+      </p>
       <a href="/car-selection-page">
         <button class="explore-btn">Book Test Drive</button>
       </a>
