--- a/Frontend/Landing_page/src/app/booking/booking.component.html
+++ b/Frontend/Landing_page/src/app/booking/booking.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" id="booking">
   <div class="hero-section">
-    <h1>Welcome to MyRNM</h1>
+    <!-- <h1>Welcome to MyRNM</h1> -->
     <p>Your journey to the perfect car starts here. Explore our wide range of Renault, Nissan, and Mitsubishi vehicles, find your ideal model, and book a test drive today!</p>
   </div>
 
