--- a/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
+++ b/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
@@ -41,7 +41,7 @@
             <h6 class="mb-10">Total Registered Users</h6>
             <h3 class="text-bold mb-10">{{totalusers}}</h3>
             <p class="text-sm text-success">
-              <span class="text-gray">(2020-2024)</span>
+              <span class="text-gray">(MyRNM)</span>
             </p>
           </div>
         </div>
@@ -57,7 +57,7 @@
             <h6 class="mb-10">Total Showrooms</h6>
             <h3 class="text-bold mb-10">{{showroomcount}}</h3>
             <p class="text-sm text-success">
-              <span class="text-gray">(Renault, Nissan and Mitsubhishi)</span>
+              <span class="text-gray">(India)</span>
             </p>
           </div>
         </div>
@@ -72,7 +72,7 @@
             <h6 class="mb-10">User Satisfaction</h6>
             <h3 class="text-bold mb-10">{{usersatisfaction}} %</h3>
             <p class="text-sm text-success">
-              <span class="text-gray"> (According to Feedback - 2024)</span>
+              <span class="text-gray"> (From Feedback data)</span>
             </p>
           </div>
         </div>
