--- a/Frontend/Landing_page/src/app/home/home.component.html
+++ b/Frontend/Landing_page/src/app/home/home.component.html
@@ -29,4 +29,6 @@
 
 <app-booking></app-booking>
 <app-service-list></app-service-list>
+<app-feedback></app-feedback>
 <app-contact></app-contact>
+
