integrated car selection - sample

--- a/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
+++ b/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
@@ -2,7 +2,7 @@
   <header class="header-section">
     <h1 class="header-title">Online Test Drive Booking</h1>
     <p class="header-subtitle">Driving your dreams forward</p>
-    <a href="/home" class="btn btn-primary btn-lg home-icon">Back to Home</a>
+    <!-- <a href="/home" class="btn btn-primary btn-lg home-icon">Back to Home</a> -->
   </header>
 
   <div class="main-body" [class.shifted]="isFilterSidebarOpen">
