--- a/Frontend/Admin/src/app/navbar/navbar.component.html
+++ b/Frontend/Admin/src/app/navbar/navbar.component.html
@@ -4,15 +4,29 @@
         MyRNM Admin -->
         <!-- <img src="assets/images/logo/logo.svg" alt="logo" /> -->
       <!-- </a> -->
-      <div class="profile-info d-flex align-items-center" id="pinfo">
+      <!-- <div class="profile-info d-flex align-items-center" id="pinfo">
         <div class="image">
             <img src="https://static.vecteezy.com/system/resources/previews/009/636/683/non_2x/admin-3d-illustration-icon-png.png" alt="image" height="48px" />
         </div>
         <div class="text ml-2">
             <h6 class="fw-500 text-black">MyRNM Admin</h6>
-            <!-- <p>Admin</p> -->
+             <p>Admin</p>
         </div>
+    </div> -->
+    
+    <div class="profile-info">
+      <div class="info">
+        <div class="image">
+          <img src="/profilepic.jpg" alt="no-img" height="80px" />
+        </div>
+        <div>
+          <h6 class="fw-500" style="font-weight: bold;">{{adminname}}</h6>
+          <p style="color: grey; ">Admin</p>
+        </div>
+      </div>
     </div>
+    
+    
     </div>
     <nav class="sidebar-nav">
       <ul>
