--- a/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
+++ b/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
@@ -128,7 +128,23 @@
 
       <div class="col-lg-5">
         <div class="card-style mb-30">
-          
+          <div class="title d-flex flex-wrap align-items-center justify-content-between">
+            <div class="left">
+              <h6 class="text-medium mb-2">Traffic</h6>
+            </div>
+            <div class="right">
+              <div class="select-style-1 mb-2">
+                <div class="select-position select-sm">
+                  <select class="bg-ligh">
+                    <option value="">Last 6 Months</option>
+                    <option value="">Last 3 Months</option>
+                    <option value="">Last Year</option>
+                  </select>
+                </div>
+              </div>
+              <!-- end select -->
+            </div>
+          </div>
           <!-- End Title -->
           <div class="chart">
             <div id="legend4">
@@ -138,9 +154,11 @@
                     <span class="bg-color primary-bg"> </span>
                     <div class="text">
                       <p class="text-sm text-success">
-                        <span class="text-dark">Positive Feedback</span>
+                        <span class="text-dark">Store Visits</span>
+                        +25.55%
+                        <i class="lni lni-arrow-up"></i>
                       </p>
-                      <h2>{{totalpositive}}</h2>
+                      <h2>3456</h2>
                     </div>
                   </div>
                 </li>
@@ -149,15 +167,16 @@
                     <span class="bg-color danger-bg"></span>
                     <div class="text">
                       <p class="text-sm text-danger">
-                        <span class="text-dark">Negative Feedback</span> 
+                        <span class="text-dark">Visitors</span> -2.05%
+                        <i class="lni lni-arrow-down"></i>
                       </p>
-                      <h2>{{totalnegative}}</h2>
+                      <h2>3456</h2>
                     </div>
                   </div>
                 </li>
               </ul>
             </div>
-            <canvas id="Chart4" style="width: 100%; height: 420px; ">{{chart4}}</canvas>
+            <canvas id="Chart4" style="width: 100%; height: 420px; margin-left: -35px;"></canvas>
           </div>
           <!-- End Chart -->
         </div>
