--- a/Frontend/Admin/src/app/navbar/navbar.component.css
+++ b/Frontend/Admin/src/app/navbar/navbar.component.css
@@ -1,6 +1,6 @@
 
 /* Add these styles in your CSS file or in a <style> block */
-#pinfo {
+/* #pinfo {
   background-color: #ebebeb;
   border-radius: 5rem;
   padding: 0.6rem;
@@ -8,6 +8,30 @@
 
 .profile-box:hover {
   background-color: rgba(255, 255, 255, 0.3); /* Darker background on hover */
+/* }  */
+.profile-info {
+  display: flex;
+  justify-content: center;
+  text-align: left;
+  /* padding: 15px; */
+  border-radius: 10px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  cursor: pointer;
+}
+
+.info {
+  display: flex;
+  align-items: center;
+}
+
+
+.profile-info:hover {
+  transform: scale(1.05); /* Slight zoom-in effect on hover */
+}
+
+
+.profile-info h6, .profile-info p {
+  margin: 0;
 }
 
 .image img {
