--- a/Frontend/Landing_page/src/app/header/header.component.html
+++ b/Frontend/Landing_page/src/app/header/header.component.html
@@ -13,8 +13,9 @@
     <div class="user-options">
       <span class="privacy-policy">Privacy Policy</span>
       <a routerLink="/location" class="user-location">
-        <i class="fas fa-location-pin"></i> Location
+        <i class="fas fa-map-marker-alt"></i> Location
       </a>
+
 
       <!-- Profile Button with Click Event to Toggle Box -->
       <span class="user-profile" (click)="toggleProfileBox()">
@@ -37,7 +38,7 @@
   <!-- Navigation Bar -->
   <nav class="nav">
     <ul>
-      <li><a href="#home">Home</a></li>
+      <li><a href="#">Home</a></li>
       <li><a href="#booking">Booking</a></li>
       <li><a href="#service-list">Service</a></li>
       <li><a href="#contact">Contact</a></li>
