--- a/Frontend/Landing_page/src/app/app.component.html
+++ b/Frontend/Landing_page/src/app/app.component.html
@@ -1,9 +1,11 @@
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 <router-outlet></router-outlet>
 <app-chatbot></app-chatbot>
 
 <!-- Scroll to Top Button -->
 <button id="scrollToTopBtn" class="scroll-to-top-btn" (click)="scrollToTop()">
-  <span>&uarr;</span> <!-- A simple upward arrow -->
+  <i class="bi bi-arrow-up-circle-fill"></i> <!-- Bootstrap icon for upward arrow -->
 </button>
-<app-footer></app-footer>
+
+
+<!-- <app-footer></app-footer> -->
