--- a/Frontend/Landing_page/src/app/booking/booking.component.css
+++ b/Frontend/Landing_page/src/app/booking/booking.component.css
@@ -1,4 +1,5 @@
-.container-fluid{
+/* Global Styles */
+.container-fluid {
   height: 100vh;
   margin: 0;
   padding: 0;
@@ -14,14 +15,15 @@
 }
 
 .hero-section h1 {
-  font-size: 3em;
+  font-size: 3.5em;
   margin-bottom: 20px;
 }
 
 .hero-section p {
-  font-size: 1.2em;
+  font-size: 1.4em;
   max-width: 700px;
   margin: 0 auto;
+  line-height: 1.6;
 }
 
 /* Card Container Styling */
@@ -29,13 +31,13 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 20px;
   padding: 0 20px;
 }
 
 .card {
   background-color: #ffffff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
   width: 30%;
   padding: 30px;
   border-radius: 10px;
@@ -48,7 +50,7 @@
 }
 
 .icon-container {
-  font-size: 3em;
+  font-size: 1em;
   color: #000000;
   margin-bottom: 20px;
 }
