--- a/Frontend/Landing_page/src/app/footer/footer.component.html
+++ b/Frontend/Landing_page/src/app/footer/footer.component.html
@@ -36,14 +36,13 @@
       </div>
 
       <div class="footer-col">
-        <h5>Follow Us</h5>
         <div class="social-icons">
-          <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
+          <h4>Follow us</h4><a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
           <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
           <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
-    </div>
+
 
     <div class="footer-bottom">
       <div class="container" id="Copyright">
