--- a/Frontend/Landing_page/src/app/home/home.component.html
+++ b/Frontend/Landing_page/src/app/home/home.component.html
@@ -1,41 +1,18 @@
-<!-- <app-header></app-header> -->
-
-
-
-<!-- <section class="home" id="home">
-  <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://www.mitsubishi-motors.com/en/products/img/xforce.png" class="d-block w-100" alt="Image 1">
-      </div>
-      <div class="carousel-item">
-        <img src="https://images.unsplash.com/photo-1594502225401-a9eab8b405dd?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Image 2">
-      </div>
-      <div class="carousel-item">
-        <img src="https://stimg.cardekho.com/images/carexteriorimages/930x620/Nissan/X-Trail/3372/1666087743726/front-left-side-47.jpg" class="d-block w-100" alt="Image 3">
-      </div>
-    </div>
-
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-</section> -->
-
+<app-header></app-header>
 <section class="home" id="home">
   <div class="video-container">
-    <video class="d-block w-100" controls autoplay muted loop>
+    <video class="d-block w-100" autoplay muted loop>
       <source src="renault_video1.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
-
   </div>
 </section>
+
 <app-booking></app-booking>
 <app-service-list></app-service-list>
 <app-contact></app-contact>
+<app-news></app-news>
+<app-feedback></app-feedback>
+<app-logo></app-logo>
+
+<app-footer></app-footer>
