--- a/Frontend/Landing_page/src/app/location/location.component.html
+++ b/Frontend/Landing_page/src/app/location/location.component.html
@@ -1,4 +1,4 @@
-<!-- <app-header></app-header> -->
+<app-header></app-header>
 
 <div class="container">
   <div class="map-container">
@@ -17,3 +17,4 @@
     </ul>
   </div>
 </div>
+<app-footer></app-footer>
